<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/event_create_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="30dp"
        tools:context=".main_ui.event_creation.EventCreateActivity">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/image_border">


            <ImageView
                android:id="@+id/event_image"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:src="@mipmap/ic_sad_frog_foreground"
                android:contentDescription="Event thumbnail" />

            <TextView
                android:id="@+id/no_photo_text"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="bottom"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:text="No event photo.\nUpload one now! (*optional)"
                android:textColor="@android:color/darker_gray"
                android:textSize="12sp"
                android:visibility="visible" />

        </FrameLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/event_image_upload"
            style="@style/PositiveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="Upload event photo"
            android:textSize="15sp" />


        <TextView
            android:id="@+id/event_name_hint"
            style="@style/TextField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="left"
            android:text="Event name" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/event_name"
            style="@style/EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:inputType="text" />

        <TextView
            android:id="@+id/event_type_hint"
            style="@style/TextField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="left"
            android:text="Type of event" />

        <TextView
            android:id="@+id/event_type"
            style="@style/EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="left" />

        <TextView
            android:id="@+id/event_num_participants_hint"
            style="@style/TextField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="left"
            android:text="Number of participants" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/event_num_participants"
            style="@style/EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:inputType="number" />

        <TextView
            android:id="@+id/event_date_time_hint"
            style="@style/TextField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="left"
            android:text="Event date and time " />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/event_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:clickable="true"
                android:text="Date" />

            <Button
                android:id="@+id/event_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:clickable="true"
                android:text="Time" />

        </LinearLayout>

        <TextView
            android:id="@+id/event_duration_hint"
            style="@style/TextField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="left"
            android:text="Event duration" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/event_duration"
            style="@style/EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:inputType="text"
            android:hint="etc. 2 hours, 1 day"/>

        <TextView
            android:id="@+id/event_language_hint"
            style="@style/TextField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="left"
            android:text="Event language(s)" />

        <TextView
            android:id="@+id/event_language"
            style="@style/EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="Select one or more languages" />

        <TextView
            android:id="@+id/event_price_hint"
            style="@style/TextField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="left"
            android:text="Price (₩)" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/event_price"
            style="@style/EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="Enter 0 if the event is free to join"
            android:inputType="number" />

        <TextView
            android:id="@+id/event_location_hint"
            style="@style/TextField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="left"
            android:text="Location" />

        <TextView
            android:id="@+id/event_location"
            style="@style/EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="Location"
            android:inputType="textMultiLine" />

        <Button
            android:id="@+id/pick_location_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Pick Location" />

        <TextView
            android:id="@+id/event_registration_hint"
            style="@style/TextField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="left"
            android:text="Registration available until: " />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/event_register_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:clickable="true"
                android:text="Date" />

            <Button
                android:id="@+id/event_register_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:clickable="true"
                android:text="Time" />

        </LinearLayout>

        <TextView
            android:id="@+id/event_description_hint"
            style="@style/TextField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="left"
            android:text="Descriptions" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/event_description"
            style="@style/EditText"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginTop="10dp"
            android:gravity="top"
            android:hint="..."
            android:inputType="textMultiLine" />

        <TextView
            android:id="@+id/alert"
            style="@style/RedItalicText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingVertical="10dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/post"
            style="@style/PositiveButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="Create" />


    </LinearLayout>

</ScrollView>
