<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/event_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp"
    tools:context=".main_ui.events.EventsActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Events"
        android:textSize="34sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/subtitle_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Registered events:"
        android:textSize="18dp"
        android:paddingVertical="10dp"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="16dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layout_one"
        android:visibility="gone"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_bg"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/sad_frog"
                android:layout_width="173dp"
                android:layout_height="156dp"
                android:layout_centerHorizontal="true"
                android:layout_marginVertical="0dp"
                android:layout_marginBottom="-80dp"
                android:src="@mipmap/ic_sad_frog_foreground" />

            <TextView
                android:id="@+id/no_event_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/sad_frog"
                android:text="You have no events :("
                android:textSize="15sp" />

            <TextView
                android:id="@+id/discover_new"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/no_event_text"
                android:layout_centerHorizontal="true"
                android:clickable="true"
                android:paddingVertical="10dp"
                android:text="Let's discover new events!"
                android:textColor="@color/green1"
                android:textSize="15sp"
                android:textStyle="italic"
                android:padding="16dp"
                android:layout_marginLeft="-16dp"
                android:layout_marginTop="-16dp"
                android:layout_marginRight="-16dp"
                android:layout_marginBottom="16dp"/>

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layout_two"
        android:visibility="visible"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/layout_two_sub">

            <TextView
                android:id="@+id/confirmed_text"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:text="Confirmed"
                android:textSize="18dp"
                android:textStyle="bold"
                android:paddingVertical="10dp"
                android:clickable="true"/>

            <TextView
                android:id="@+id/divider_text"
                android:layout_width="0dp"
                android:layout_weight="0.1"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:text="|"
                android:textSize="18dp"
                android:textStyle="bold"
                android:paddingVertical="10dp"/>

            <TextView
                android:id="@+id/pending_text"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:text="Pending"
                android:textSize="18dp"
                android:paddingVertical="10dp"
                android:clickable="true"/>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/no_event_layout"
            android:visibility="visible"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/sad_frog1"
                android:layout_width="173dp"
                android:layout_height="156dp"
                android:layout_centerHorizontal="true"
                android:layout_marginVertical="0dp"
                android:layout_marginBottom="-80dp"
                android:src="@mipmap/ic_sad_frog_foreground" />

            <TextView
                android:id="@+id/no_events_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/sad_frog1"
                android:text="No events :("
                android:textSize="15sp"/>

        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/eventCardContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            </LinearLayout>
        </ScrollView>


    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/loading_layout">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />

    </RelativeLayout>

</LinearLayout>