<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/ic_home_foreground"
        android:title="Home" />
    <item
        android:id="@+id/menu_create"
        android:icon="@drawable/ic_create_foreground"
        android:title="Create" />
    <item
        android:id="@+id/menu_events"
        android:icon="@drawable/ic_events_foreground"
        android:title="Events" />
    <item
        android:id="@+id/menu_profile"
        android:icon="@drawable/ic_profile_foreground"
        android:title="Profile" />
</menu>